[package]
name = "winit-cube-rotate"
version = "0.1.0"
authors = ["Osspial <osspial@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gullery = {git="https://github.com/Osspial/gullery.git"}
gullery_macros = {git="https://github.com/Osspial/gullery.git"}
cgmath-geometry = {git="https://github.com/Osspial/cgmath-geometry.git"}
glutin = "0.22.0-alpha1"
